objects/UNITY_Attachment__c.object
<CustomObject>
    <description>UNITY Attachment object</description>
    <fields>
        <fullName>Customer_Ultimate_Parent_Text__c</fullName>
        <description>Text version of the work orders&apos;s customer&apos;s UNITY_Company formula field. This is temporarily used for the Ross community project.</description>
        <label>Customer Ultimate Parent Text</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_Standard_Attachment_Id__c</fullName>
        <description>It stores standard attachment id</description>
        <label>Standard Attachment Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Document_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Attachments</relationshipLabel>
        <relationshipName>Attachments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Attachment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Work_Order__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Atch-{0000000000}</displayFormat>
        <label>Attachment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attachments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <sharingReasons>
        <fullName>Vendor_Community__c</fullName>
        <label>Vendor Community</label>
    </sharingReasons>
</CustomObject>